--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,15 @@
-name: Sync OpenWrt to Main
+name: Sync OpenWrt 23.05.5 to Main
 
 permissions:
   contents: write  # 允许写入内容
 
 on:
-  # 当 .github/workflows/main.yml 文件更新时触发
   push:
     paths:
       - '.github/workflows/main.yml'
-  # 每 12 小时运行一次
   schedule:
-    - cron: '0 */12 * * *'
-  # 支持手动触发
-  workflow_dispatch:
+    - cron: 0 */12 * * *  # 每12小时运行一次
+  workflow_dispatch:  # 支持手动触发
 
 jobs:
   sync:
@@ -21,60 +18,56 @@ jobs:
       # 1. 克隆 OpenWrt 官方仓库的 23.05.5 分支
       - name: Clone OpenWrt Repository
         run: |
-          git clone --branch v23.05.5 https://github.com/openwrt/openwrt.git openwrt
+          git clone --branch openwrt-23.05.5 https://github.com/openwrt/openwrt.git openwrt
           cd openwrt
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # 2. 克隆目标仓库（你的 openwrt-23.05.5 仓库）
+      # 2. 克隆目标仓库（你的仓库）
       - name: Clone Your Repository
         env:
           PAT: ${{ secrets.PAT_TOKEN }}
         run: |
           git clone https://x-access-token:${PAT}@github.com/wixxm/openwrt-23.05.5.git target_repo
 
-      # 3. 备份目标仓库中的 .github 文件夹和特定文件
-      - name: Backup .github Folder and Specific Files
+      # 3. 备份 .github 文件夹和需要保留的文件
+      - name: Backup Existing Files
         run: |
           mkdir -p backup
+          # 备份 .github 文件夹
           if [ -d "target_repo/.github" ]; then
             mv target_repo/.github backup/github_backup
           fi
+          # 备份需要保留的文件
           mkdir -p backup/files
-          cp -p target_repo/config/Config-images.in backup/files/ || echo "Config-images.in not found"
-          cp -p target_repo/package/base-files/files/etc/banner backup/files/ || echo "banner not found"
-          cp -p target_repo/package/base-files/files/bin/config_generate backup/files/ || echo "config_generate not found"
-          cp -p target_repo/include/version.mk backup/files/ || echo "version.mk not found"
+          cp -r target_repo/config/Config-images.in backup/files/
+          cp -r target_repo/package/base-files/files/etc/banner backup/files/
+          cp -r target_repo/package/base-files/files/bin/config_generate backup/files/
+          cp -r target_repo/include/version.mk backup/files/
 
       # 4. 将 OpenWrt 仓库的内容同步到目标仓库
       - name: Sync OpenWrt Changes
         run: |
           rsync -av --delete --exclude='.git' --exclude='.github' openwrt/ target_repo/
 
-      # 5. 恢复目标仓库中的 .github 文件夹和特定文件
-      - name: Restore .github Folder and Specific Files
+      # 5. 恢复备份的文件和文件夹
         run: |
+          # 恢复 .github 文件夹
           if [ -d "backup/github_backup" ]; then
             mv backup/github_backup target_repo/.github
           fi
-          cp -p backup/files/Config-images.in target_repo/config/ || echo "Config-images.in not restored"
-          cp -p backup/files/banner target_repo/package/base-files/files/etc/ || echo "banner not restored"
-          cp -p backup/files/config_generate target_repo/package/base-files/files/bin/ || echo "config_generate not restored"
-          cp -p backup/files/version.mk target_repo/include/ || echo "version.mk not restored"
+          # 恢复其他文件
+          cp -r backup/files/Config-images.in target_repo/config/
+          cp -r backup/files/banner target_repo/package/base-files/files/etc/
+          cp -r backup/files/config_generate target_repo/package/base-files/files/bin/
+          cp -r backup/files/version.mk target_repo/include/
 
-      # 6. 配置 Git 提交信息
-      - name: Configure Git User
-        run: |
-          cd target_repo
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-      # 7. 提交并推送更改到目标仓库
+      # 6. 提交更改
       - name: Commit and Push Changes
         env:
           PAT: ${{ secrets.PAT_TOKEN }}
         run: |
           cd target_repo
           git add .
-          git commit -m "Sync OpenWrt 23.05.5 branch (excluding OpenWrt .github folder and preserving specific files)" || echo "No changes to commit"
+          git commit -m "Sync OpenWrt 23.05.5 branch with specific files retained" || echo "No changes to commit"
           git push origin HEAD:main --force
